<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:background="@drawable/wq"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/add_button"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_product"
        android:layout_alignLeft="@+id/input_product"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="15dp"
        android:layout_toLeftOf="@+id/clear_button"
        android:background="@color/input_tint"
        android:text="@string/add_button" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_product"
        android:layout_alignRight="@+id/input_product"
        android:layout_marginLeft="15sp"
        android:background="@color/clr_btn"
        android:text="@string/clear" />

    <EditText
        android:id="@+id/input_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginHorizontal="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"

        android:layout_marginEnd="55dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/input_tint"

        android:ems="10"
        android:hint="@string/input_product"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/textColorLightTheme"
        android:textColorHint="@color/textColorHintLight"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_list"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="55dp">


        <TextView
            android:id="@+id/recipes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_text"
            android:textColor="@color/textColorLightTheme" />
    </ScrollView>

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="35sp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="15sp"
        android:fontFamily="sans-serif"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textColor="@color/textColorLightTheme"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />


    <TextView
        android:id="@+id/product_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_button"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="55dp"
        android:text="@string/empty"
        android:textColor="@color/textColorLightTheme" />


</RelativeLayout>